Add viewport meta tags, footers, and DISABLE_TRAINING flag

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ Desktop.ini
 # IDE / Editor specific (optional, but good practice)
 .vscode/
 # .idea/
+
+# Large files
+Unified_app/UnifiedKamiEcoApp.zip
